syntax = "proto3";
package payment;

option go_package = "payment/gen;payment";

service Payment {
    rpc GetPaymentUrl(GetPaymentUrlRequest) returns (GetPaymentUrlResponse);
}

message GetPaymentUrlRequest {
    string name = 1;
    string description = 2;
    int64 amount = 3;
    string payment_method = 4;
    string user_id = 5;
}

message GetPaymentUrlResponse {
    string payment_url = 1;
}
